--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,7 +1,8 @@
 .contactsWrapper {
   display: flex;
   padding: 4px;
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
   align-items: center;
   background-color: rgb(255, 255, 255);
   color: black;
@@ -13,18 +14,39 @@
 .textWrapper {
   display: flex;
   flex-direction: column;
-  gap: 4px;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+.name {
+  margin-bottom: auto;
+}
+
+.btnWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: space-around;
+  margin-left: auto;
 }
 
 .btn {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: auto;
-  padding: 6px 12px;
+  padding: 4px 12px;
   line-height: 18px;
   border: 1px solid rgba(0, 0, 0, 0.377);
   border-radius: 4px;
   background-color: rgb(211, 211, 211);
   color: inherit;
+  transition: background-color 250ms;
+}
+
+.btn:first-child:hover {
+  background-color: #08d308;
+}
+
+.btn:last-child:hover {
+  background-color: #f66d6d;
 }
