--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -1,6 +1,7 @@
 .searchWrapper {
   padding: 12px;
   max-width: 300px;
+  width: 100%;
   border-radius: 6px;
   background-color: rgb(255, 255, 255);
   /* margin-bottom: 12px; */
