--- a/src/components/EditContactForm/EditContactForm.module.css
+++ b/src/components/EditContactForm/EditContactForm.module.css
@@ -15,6 +15,31 @@
   border: 1.5px solid black;
   border-radius: 6px;
   background-color: rgb(255, 255, 255);
+  position: relative;
+}
+
+.closeBtn {
+  position: absolute;
+  top: 4px;
+  right: 4px;
+  border: none;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: inherit;
+  color: black;
+  /* border: 0.5px solid black; */
+  border-radius: 50%;
+  padding: 2px;
+  transition: font-size 250ms, font-weight 250ms, color 250ms, border 250ms;
+}
+
+.closeBtn:hover {
+  font-size: 18px;
+  font-weight: 700;
+  color: red;
+  border: 1px solid red;
 }
 
 .label {
