--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,7 +1,7 @@
 .contactsWrapper {
   display: flex;
   padding: 4px;
-  width: 100%;
+  width: 300px;
   height: 100%;
   align-items: center;
   background-color: rgb(255, 255, 255);
