--- a/src/components/EditContactForm/EditContactForm.module.css
+++ b/src/components/EditContactForm/EditContactForm.module.css
@@ -14,7 +14,7 @@
   padding: 12px;
   border: 1.5px solid black;
   border-radius: 6px;
-  background-color: rgb(255, 255, 255);
+  background-color: #ffffff;
   position: relative;
 }
 
