--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -1,3 +1,10 @@
 .loginWrapper {
   justify-items: center;
 }
+
+.loaderWrapperAuth {
+  height: 80px;
+  margin-top: -24px;
+  margin-bottom: -36px;
+  align-content: center;
+}
